# IPC_COM

./: CMakeLists.txt  build.sh  main.cpp  run_ipc_services.sh
ReadME/: Additional_Testing.txt  How_TO_TEST.txt  how_code_works.txt
include/: daemon.h  ipc.h  registry.h  service_registry.h
include/proxy/: findservice_interface.h
include/skeleton/: offerservice_interface.h
src/: daemon.cpp  ipc.cpp  registry.cpp  service_registry.cpp
test_app/: findservice_API.cpp  offerservice_API.cpp
